# rust_torrent

./: .gitignore  Cargo.toml  makefile  test.torrent
bencoding/: Cargo.toml  README.md  data.json  data2_encoded.torrent
bencoding/src/: lib.rs  makefile  read_torrent_data.rs
src/: main.rs  network_manager.rs  peer_messaging.rs
