[package]
name = "console_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
bencoding = {path="bencoding"}
derive_builder = "0.12.0"
num_enum = "0.6.1"
# bincode = "1.3.3"
# serde = { version = "1.0.166", features = ["derive"] }
