[package]
name = "bencoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0"